# exe_path

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_run_tests.yml
include/exe_path/: exe_path.h
src/: exe_path.cpp
test/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt  tests.cpp
